[tool.poetry]
name = "pyctuator"
version = "0.13.5"
description = "A Python implementation of the Spring Actuator API for popular web frameworks"
authors = [
    "Michael Yakobi <michael.yakobi@solaredge.com>",
    "Inbal Levi <inbal.levi@solaredge.com>",
    "Yanay Reingewertz <yanay.reingewertz@solaredge.com>",
    "Matan Rubin <matan.rubin@solaredge.com>"
]
maintainers = [
    "Matan Rubin <matan.rubin@solaredge.com>",
    "Michael Yakobi <michael.yakobi@solaredge.com>"
]
readme = "README.md"
homepage = "https://github.com/SolarEdgeTech/pyctuator"
repository = "https://github.com/SolarEdgeTech/pyctuator"
keywords = ["spring boot admin", "actuator", "pyctuator", "fastapi", "flask", "aiohttp"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
    "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.dependencies]
python = "^3.7"
psutil = { version = "^5.6", optional = true }
flask = { version = "^1.1", optional = true }
fastapi = { version = "^0.41.0", optional = true }
uvicorn = { version = "^0.9.0", optional = true }
sqlalchemy = {version = "^1.3", optional = true}
PyMySQL = {version = "^0.9.3", optional = true}
cryptography = {version = "^2.8", optional = true}
redis = {version = "^3.3", optional = true}
aiohttp = {version = "^3.6.2", optional = true}
tornado = {version = "^6.0.4", optional = true}

[tool.poetry.dev-dependencies]
requests = "^2.22"
pytest = "^3.0"
mypy = "^0.730.0"
pylint = "~2.4.4"   # v2.5 does not properly run on docker image...
pytest-cov = "^2.8"
autopep8 = "^1.4"

[tool.poetry.extras]
psutil = ["psutil"]
fastapi = ["fastapi", "uvicorn"]
flask = ["flask"]
aiohttp = ["aiohttp"]
tornado = ["tornado"]
db = ["sqlalchemy", "PyMySQL", "cryptography"]
redis = ["redis"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
