[tool.poetry]
name = "pyctuator"
version = "1.8.0"
description = "A Python implementation of the Spring Actuator API for popular web frameworks"
authors = [
    "Michael Yakobi <michael.yakobi@solaredge.com>",
    "Inbal Levi <inbal.levi@solaredge.com>",
    "Yanay Reingewertz <yanay.reingewertz@solaredge.com>",
    "Matan Rubin <matan.rubin@solaredge.com>"
]
maintainers = [
    "Matan Rubin <matan.rubin@solaredge.com>",
    "Michael Yakobi <michael.yakobi@solaredge.com>"
]
readme = "README.md"
homepage = "https://github.com/SolarEdgeTech/pyctuator"
repository = "https://github.com/SolarEdgeTech/pyctuator"
keywords = ["spring boot admin", "actuator", "pyctuator", "fastapi", "flask", "aiohttp", "tornado"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Framework :: FastAPI",
    "Framework :: aiohttp",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
    "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.dependencies]
python = "^3.9"
psutil = { version = "^6.0.0", optional = true }
flask = { version = "^2.3.0", optional = true }
fastapi = { version = "^0.111.1", optional = true }
uvicorn = { version = "^0.30.1", optional = true }
sqlalchemy = {version = "^2.0.31", optional = true}
PyMySQL = {version = "^1.1.1", optional = true}
cryptography = {version = ">=39.0.1,<40.0.0", optional = true}
redis = {version = "^5.0.7", optional = true}
aiohttp = {version = "^3.9.4", optional = true}
tornado = {version = "^6.4.1", optional = true}

[tool.poetry.dev-dependencies]
requests = "^2.32.3"
pytest = "^8.2.2"
mypy = "^1.11.0"
pylint = "^2.15.0"   # v2.5 does not properly run on docker image...
pytest-cov = "^5.0.0"
autopep8 = "^2.3.1"

[tool.poetry.extras]
psutil = ["psutil"]
fastapi = ["fastapi", "uvicorn"]
flask = ["flask"]
aiohttp = ["aiohttp"]
tornado = ["tornado"]
db = ["sqlalchemy", "PyMySQL", "cryptography"]
redis = ["redis"]

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
