[tool.poetry]
name = "fastapi-pyctuator-example"
version = "1.0.0"
description = "Example of using Pyctuator"
authors = [
    "Luke Skywalker <Luke@starwars.com>",
]

[tool.poetry.dependencies]
python = "^3.9"
psutil = { version = "^5.6" }
fastapi = { version = "^0.65.2" }
uvicorn = { version = "^0.11.7" }
pyctuator = { version = "^1.0.1" }
sqlalchemy = { version = "^1.3" }
PyMySQL = { version = "^0.9.3" }
cryptography = { version = "^2.8" }
redis = { version = "^3.3" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

