[tool.poetry]
name = "fastapi-pyctuator-example"
version = "1.0.0"
description = "Example of using Pyctuator"
authors = [
    "Luke Skywalker <Luke@starwars.com>",
]

[tool.poetry.dependencies]
python = "^3.7"
psutil = { version = "^5.6" }
fastapi = { version = "^0.41.0" }
uvicorn = { version = "^0.9.0" }
pyctuator = { version = "^0.13.3" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

