[tool.poetry]
name = "flask-pyctuator-example"
version = "1.0.0"
description = "Example of using Pyctuator"
authors = [
    "Luke Skywalker <Luke@starwars.com>",
]

[tool.poetry.dependencies]
python = "^3.7"
psutil = { version = "^5.6" }
flask = { version = "^1.1" }
pyctuator = { version = "^0.18.1" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

