[tool.poetry]
name = "aiohttp-pyctuator-example"
version = "1.0.0"
description = "Example of using Pyctuator"
authors = [
    "Luke Skywalker <Luke@starwars.com>",
]

[tool.poetry.dependencies]
python = "^3.7"
psutil = { version = "^5.6" }
aiohttp = { version = "^3.5.4" }
pyctuator = { version = "^0.13.1" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

