[tool.poetry]
name = "aiohttp-pyctuator-example"
version = "1.0.0"
description = "Example of using Pyctuator"
authors = [
    "Luke Skywalker <Luke@starwars.com>",
]

[tool.poetry.dependencies]
python = "^3.9"
psutil = { version = "^5.6" }
aiohttp = { version = "^3.6.2" }
pyctuator = { version = "^1.0.0" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

