[tool.poetry]
name = "tornado-pyctuator-example"
version = "1.0.0"
description = "Example of using Pyctuator"
authors = [
    "Desmond Stonie <aneasystone@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.9"
psutil = { version = "^5.6" }
tornado = { version = "^6.0.4" }
pyctuator = { version = "^1.2.0" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

